--- a/package.json
+++ b/package.json
@@ -9,6 +9,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-inferno": "^1.0.0-legacy",
+    "babel-preset-es2015": "^6.18.0",
     "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "inferno": "^0.7.27",
+    "inferno-dom": "^0.7.27"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "inferno"
+    ]
   }
 }
