--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-inferno": "^1.0.0-legacy",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
     "webpack": "^1.14.0"
   },
   "dependencies": {
     "inferno": "^0.7.27",
+    "inferno-component": "^0.7.27",
     "inferno-dom": "^0.7.27"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "stage-0"
     ],
     "plugins": [
       "inferno"
